--- a/app/views/payments/checkout.html.erb
+++ b/app/views/payments/checkout.html.erb
@@ -4,6 +4,9 @@
 <head>
     <meta charset="utf-8">
     <script src="https://js.braintreegateway.com/web/dropin/1.33.3/js/dropin.min.js"></script>
+    <!-- Load the client component. -->
+    <script src="https://js.braintreegateway.com/web/3.85.5/js/client.min.js"></script>
+    <script src="https://js.braintreegateway.com/web/3.85.5/js/paypal-checkout.min.js"></script>
 </head>
 <body>
 
@@ -13,6 +16,7 @@
         `braintree.dropin.create` inside a form will make layout and flow
         easier to manage -->
         <div id="dropin-container"></div>
+        <div id="paypal-button"></div>
         <input id="submit-button" type="submit" value="Purchase"/>
         <input type="hidden" id="nonce" name="payment_method_nonce"/>
     <% end %>
@@ -22,11 +26,15 @@
 
         // Step two: create a dropin instance using that container (or a string
         //   that functions as a query selector such as `#dropin-container`)
-
         braintree.dropin.create({
-            container: document.getElementById('dropin-container'),
             // ...plus remaining configuration
-            authorization: '<%= @client_token %>'
+            authorization: '<%= @client_token %>',
+            container: document.getElementById('dropin-container'),
+            paypal: {
+                flow: 'checkout',
+                amount: '10.00',
+                currency: 'USD'
+            }
         }, (error, dropinInstance) => {
 
             form.addEventListener('submit', () => {
